Consolidate gain-control-until-end-of-turn effects into single reusable effect
Merge GainControlOfTargetCreatureUntilEndOfTurnEffect and
GainControlOfTargetEquipmentUntilEndOfTurnEffect into the existing
GainControlOfTargetPermanentUntilEndOfTurnEffect, since card target
filters already handle type restrictions. Decompose the equipment
version's attach behavior into a new AttachTargetToSourcePermanentEffect.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>